# RISE

./: .gitignore  README.md  pyproject.toml
configs/engines/: pressure_fed_test.yaml
research/: README.md
src/: main.py
src/rise/: main.py
src/rise/application/dtos/: simulation_input.py  simulation_result.py
src/rise/application/use_cases/: run_simulation.py
src/rise/domain/entities/: engine.py  nozzle.py
src/rise/domain/services/: thrust_service.py
src/rise/domain/value_objects/: operating_point.py
src/rise/infrastructure/config/: engine_config_loader.py
src/rise/interfaces/presenters/: console_presenter.py
tests/: conftest.py  test_run_simulation.py  test_thrust_service.py
