[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rise"
version = "0.1.0"
description = "Rocket Integrated Simulation Environment"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
rise = "rise.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
